# helldivers2_tool

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  H750_APP.ioc  STM32H750XBHx_FLASH.ld  startup_stm32h750xx.s
Core/Inc/: FreeRTOSConfig.h  GT9147_driver.h  helldivers.h  keybrd.h  lvgl_app.h  lvgl_driver.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  sysmem.h
Core/Src/: GT9147_driver.c  freertos.c  gpio.c  helldivers.c  i2c.c  ltdc.c  lv_font_simhei_12.c  lv_font_simhei_16.c  lvgl_app.c  lvgl_driver.c  main.c  stm32h7xx_it.c  sysmem.c  system_stm32h7xx.c  usart.c
USB_DEVICE/App/: usb_device.h
cmake/stm32cubemx/: CMakeLists.txt
images/: CMakeLists.txt  generate_header.py
include/: lv_conf.h
userfile/: STM32H750XBHx_FLASH.ld  usbd_hid.c
